// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render <DrsIndex /> component with data 1`] = `
<div
  align="center"
>
  <meta
    content="minimum-scale=1, initial-scale=1, width=device-width"
    name="viewport"
  />
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
    >
      <div
        align="left"
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge"
          href="/"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiTypography-root MuiTypography-button"
            >
              Home
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8"
      >
        <h2
          class="MuiTypography-root MuiTypography-h2 MuiTypography-gutterBottom"
        >
          Welcome to DRS Starter Kit
        </h2>
      </div>
      <div
        align="right"
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge"
          href="/drs/new"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiTypography-root MuiTypography-button"
            >
              New DRS Object
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
  </div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg"
  >
    <div
      class="MuiTableContainer-root"
    >
      <table
        class="MuiTable-root"
      >
        <thead
          class="MuiTableHead-root"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft"
              scope="col"
            >
              <h5
                class="MuiTypography-root MuiTypography-h5"
              >
                DRS Object ID
              </h5>
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft"
              scope="col"
            >
              <h5
                class="MuiTypography-root MuiTypography-h5"
              >
                Name
              </h5>
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter"
              scope="col"
            >
              <h5
                class="MuiTypography-root MuiTypography-h5"
              >
                View Details
              </h5>
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter"
              scope="col"
            >
              <h5
                class="MuiTypography-root MuiTypography-h5"
              >
                Edit
              </h5>
            </th>
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                b8cd0667-2c33-4c9f-967b-161b905932c9
              </p>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                phenopackets.test.dataset
              </p>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
            >
              <a
                aria-disabled="false"
                aria-label="view-details-button"
                class="MuiButtonBase-root MuiButton-root MuiButton-contained"
                href="/drs/b8cd0667-2c33-4c9f-967b-161b905932c9"
                role="button"
                tabindex="0"
              >
                <span
                  class="MuiButton-label"
                >
                  <span
                    class="MuiTypography-root MuiTypography-button"
                  >
                    View Details
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
            >
              <a
                aria-disabled="false"
                aria-label="edit-button"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary"
                href="/drs/b8cd0667-2c33-4c9f-967b-161b905932c9/edit"
                role="button"
                tabindex="0"
                variant="contained"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                a1dd4ae2-8d26-43b0-a199-342b64c7dff6
              </p>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                phenopackets.cao.family
              </p>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
            >
              <a
                aria-disabled="false"
                aria-label="view-details-button"
                class="MuiButtonBase-root MuiButton-root MuiButton-contained"
                href="/drs/a1dd4ae2-8d26-43b0-a199-342b64c7dff6"
                role="button"
                tabindex="0"
              >
                <span
                  class="MuiButton-label"
                >
                  <span
                    class="MuiTypography-root MuiTypography-button"
                  >
                    View Details
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
            >
              <a
                aria-disabled="false"
                aria-label="edit-button"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary"
                href="/drs/a1dd4ae2-8d26-43b0-a199-342b64c7dff6/edit"
                role="button"
                tabindex="0"
                variant="contained"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                1a570e4e-2489-4218-9333-f65549495872
              </p>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                phenopackets.cao.1
              </p>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
            >
              <a
                aria-disabled="false"
                aria-label="view-details-button"
                class="MuiButtonBase-root MuiButton-root MuiButton-contained"
                href="/drs/1a570e4e-2489-4218-9333-f65549495872"
                role="button"
                tabindex="0"
              >
                <span
                  class="MuiButton-label"
                >
                  <span
                    class="MuiTypography-root MuiTypography-button"
                  >
                    View Details
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
            >
              <a
                aria-disabled="false"
                aria-label="edit-button"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary"
                href="/drs/1a570e4e-2489-4218-9333-f65549495872/edit"
                role="button"
                tabindex="0"
                variant="contained"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                4d83ba3f-a476-4c7c-868f-3d1fcf77fe29
              </p>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                phenopackets.cao.2
              </p>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
            >
              <a
                aria-disabled="false"
                aria-label="view-details-button"
                class="MuiButtonBase-root MuiButton-root MuiButton-contained"
                href="/drs/4d83ba3f-a476-4c7c-868f-3d1fcf77fe29"
                role="button"
                tabindex="0"
              >
                <span
                  class="MuiButton-label"
                >
                  <span
                    class="MuiTypography-root MuiTypography-button"
                  >
                    View Details
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
            >
              <a
                aria-disabled="false"
                aria-label="edit-button"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary"
                href="/drs/4d83ba3f-a476-4c7c-868f-3d1fcf77fe29/edit"
                role="button"
                tabindex="0"
                variant="contained"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                924901d5-6d31-4c33-b443-7931eadfac4b
              </p>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                phenopackets.cao.3
              </p>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
            >
              <a
                aria-disabled="false"
                aria-label="view-details-button"
                class="MuiButtonBase-root MuiButton-root MuiButton-contained"
                href="/drs/924901d5-6d31-4c33-b443-7931eadfac4b"
                role="button"
                tabindex="0"
              >
                <span
                  class="MuiButton-label"
                >
                  <span
                    class="MuiTypography-root MuiTypography-button"
                  >
                    View Details
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
            >
              <a
                aria-disabled="false"
                aria-label="edit-button"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary"
                href="/drs/924901d5-6d31-4c33-b443-7931eadfac4b/edit"
                role="button"
                tabindex="0"
                variant="contained"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                0f8abce3-e161-4bdf-981f-86257d505d69
              </p>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                phenopackets.cao.4
              </p>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
            >
              <a
                aria-disabled="false"
                aria-label="view-details-button"
                class="MuiButtonBase-root MuiButton-root MuiButton-contained"
                href="/drs/0f8abce3-e161-4bdf-981f-86257d505d69"
                role="button"
                tabindex="0"
              >
                <span
                  class="MuiButton-label"
                >
                  <span
                    class="MuiTypography-root MuiTypography-button"
                  >
                    View Details
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
            >
              <a
                aria-disabled="false"
                aria-label="edit-button"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary"
                href="/drs/0f8abce3-e161-4bdf-981f-86257d505d69/edit"
                role="button"
                tabindex="0"
                variant="contained"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Render <DrsIndex /> component without data 1`] = `
<div
  align="center"
>
  <meta
    content="minimum-scale=1, initial-scale=1, width=device-width"
    name="viewport"
  />
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
    >
      <div
        align="left"
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge"
          href="/"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiTypography-root MuiTypography-button"
            >
              Home
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8"
      >
        <h2
          class="MuiTypography-root MuiTypography-h2 MuiTypography-gutterBottom"
        >
          Welcome to DRS Starter Kit
        </h2>
      </div>
      <div
        align="right"
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge"
          href="/drs/new"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiTypography-root MuiTypography-button"
            >
              New DRS Object
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
  </div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg"
  >
    <div
      class="MuiTableContainer-root"
    >
      <table
        class="MuiTable-root"
      >
        <thead
          class="MuiTableHead-root"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft"
              scope="col"
            >
              <h5
                class="MuiTypography-root MuiTypography-h5"
              >
                DRS Object ID
              </h5>
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft"
              scope="col"
            >
              <h5
                class="MuiTypography-root MuiTypography-h5"
              >
                Name
              </h5>
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter"
              scope="col"
            >
              <h5
                class="MuiTypography-root MuiTypography-h5"
              >
                View Details
              </h5>
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter"
              scope="col"
            >
              <h5
                class="MuiTypography-root MuiTypography-h5"
              >
                Edit
              </h5>
            </th>
          </tr>
        </thead>
      </table>
    </div>
  </div>
</div>
`;
